# rustylens

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build-appimage.sh  com.example.RustyLens.json  install.sh  io.github.pranavk_official.RustyLens.json  mkdocs.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
data/: io.github.pranavk_official.RustyLens.desktop  io.github.pranavk_official.RustyLens.metainfo.xml
docs/: changelog.md  contributing.md  getting-started.md  index.md
docs-site/: main.py  pyproject.toml
docs/installation/: build-from-source.md  index.md  install-script.md  releases.md
docs/reference/: architecture.md  cli.md  project-structure.md
docs/usage/: gui.md  languages.md  screenshot.md
src/: main.rs  ocr.rs  portal.rs  ui.rs
