[package]
name = "rustylens"
version = "0.1.8"
edition = "2024"
description = "Lightweight desktop app for image preview and OCR text extraction"
authors = ["RustyLens Contributors"]
license = "GPL-3.0-or-later"

[[bin]]
name = "rustylens"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
leptess = "0.14"
tokio = { version = "1", features = ["rt", "net", "time"] }

# Linux: use XDG Desktop Portals (D-Bus) for file chooser and screenshot
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", features = ["gtk4", "screenshot", "file_chooser"] }

# macOS / Windows: native file dialogs via rfd
[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.15"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
